--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
