--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.1.0",
     "react-router-dom": "6",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^8.2.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
