--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=storetail;User Id=postgres;Password=postgres"
+  },
+  "JWTSettings": {
+    "SecurityKey": "This is a security key of more than 12 character;"
   }
 }
