--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "6",
     "react-toastify": "^8.2.0",
@@ -26,7 +27,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
+    "typescript": "^5.2.2",
     "vite": "^2.8.0"
   }
 }
