--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.4",
@@ -21,7 +22,8 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "6",
     "react-toastify": "^8.2.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
