--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,17 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^3.3.2",
-    "@mui/icons-material": "^5.5.1",
+    "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.133",
-    "@mui/material": "^5.13.4",
+    "@mui/material": "^5.14.16",
+    "@mui/styles": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.10",
     "axios": "^0.26.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "nuka-carousel": "^6.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "6",
@@ -28,8 +30,8 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^2.8.0"
