--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.8.10",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react": "^1.0.7",
